# robocup-ai

./: sim_launch.sh  test_basic_skills.sh  test_pkgs.sh
src/action_selection/: CMakeLists.txt  package.xml  setup.py
src/action_selection/src/action_selection/: __init__.py  selectors.py
src/basic_skills/: CMakeLists.txt  package.xml
src/basic_skills/src/basic_skills/: __init__.py  action.py  move_to.py  player_data.py  robot.py
src/basic_skills/src/basic_skills/path_planning/: collision_checker.py  fmt.py  path_planner.py  planner_plotter.py  prm.py  prt.py  rrt.py  sampler.py  traj_generator.py
src/basic_skills/src/basic_skills/trajectory_generation/: reaction_algorithms.py  traj_generator.py
src/basic_skills/test/algorithms/: algorithms.test  fmt_unit_test.py  prm_unit_test.py  rrt_unit_test.py
src/basic_skills/test/planner_helpers/: planner_helpers.test  test_collisions.py  test_path_planner.py  test_sampler.py  test_traj_gen.py
src/basic_skills/test/skills/: move_to_unit_test.py  skills.test
src/basic_skills/test/utilities/: action_unit_tests.py  player_data_unit_tests.py  pose_unit_tests.py  robot_unit_tests.py  utilities_test.test
src/coach/: CMakeLists.txt  package.xml  setup.py
src/coach/launch/: coach.launch
src/coach/scripts/: coach_node
src/coach/src/coach/: __init__.py  coach.py
src/path_planning_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/path_planning_rqt/resource/: planner_plugin.ui
src/path_planning_rqt/scripts/: path_planning_plugin
src/path_planning_rqt/src/path_planning_rqt/: __init__.py  planner_widget.py  plugin_module.py
src/player/: CMakeLists.txt  package.xml  setup.py
src/player/launch/: player.launch
src/player/scripts/: player_node
src/player/src/player/: __init__.py  player.py  robot.py  sim_sender.py
src/player/test/: test_sim_sender.py
src/robocup_control/launch/: player_control.launch  test.launch
src/robocup_control/src/: player_hw_interface.cpp
src/robocup_master/: CMakeLists.txt
src/robocup_master/config/: sim.yaml
src/robocup_master/launch/: master.launch
src/robocup_master/scripts/: grsim_node.py
src/robocup_master/src/robocup_master/: config_loader.py
src/robocup_msgs/: CMakeLists.txt  package.xml
src/robocup_msgs/msg/: Graph.msg  Position.msg  RobotData.msg  Strategy.msg  Token.msg
src/sensor_processing/: CMakeLists.txt
src/sensor_processing/launch/: ssl_vision.launch
src/sensor_processing/scripts/: ssl_vision_node.py
src/sensor_processing/src/sensor_processing/: __init__.py  ssl_data_handler.py  ssl_receiver.py
src/sensor_processing/test/: ssl_vision_unit_tests.py  test_all.test
src/skill_execution/: CMakeLists.txt  package.xml  setup.py
src/skill_execution/src/skill_execution/: __init__.py  shoot.py
src/skill_execution/src/skill_execution/zonal/: move_to_zone.py
src/skill_execution/test/: test_skill_impl.py
src/strategy_execution/: CMakeLists.txt  package.xml  setup.py
src/strategy_execution/src/strategy_execution/: __init__.py  strategy.py
src/strategy_execution/src/strategy_execution/impl/: test_strategy.py
src/strategy_selection/: CMakeLists.txt  package.xml  setup.py
src/strategy_selection/src/strategy_selection/: __init__.py  selection_metrics.py  simple_strategy_selector.py
